increased min height of slider to avoid overlap with footer.

--- a/app/assets/stylesheets/qwiqq.css.scss
+++ b/app/assets/stylesheets/qwiqq.css.scss
@@ -683,7 +683,7 @@ p.empty-deals{
 
 #user #slider {
   margin-left: 280px; 
-  min-height: 500px;
+  min-height: 550px;
 }
 
 #user img.user-photo {
